# opengl-forward-renderer

./: .gitignore  CLAUDE.md  CMakeLists.txt  GITFLOW.md  README.md  build.bat  build.sh  imgui.ini  run.bat  run.sh
.VSCodeCounter/2026-04-16_20-39-27/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.cache/clangd/index/: Application.cpp.17AB54E255ED4F47.idx  Application.h.AADDC92F96CEFF59.idx  Renderer.cpp.EECE25E297017905.idx  Renderer.h.0E66EC0F4C53AEE0.idx  abi_macros.hpp.BD2CA927AA9CC4DB.idx  adl_serializer.hpp.7ACC035B1D76D7B7.idx  ansicolor_sink-inl.h.BD1190D1E7F722AA.idx  ansicolor_sink.h.1AAB69A71E262FED.idx  async.cpp.0D77C337AC09612B.idx  async.h.BBC22BBBBDB1380A.idx  async_logger-inl.h.15F00E8AAFDF6CFE.idx  async_logger.h.D8C19F25203CD134.idx  backtracer-inl.h.FA0647A32E11DC0F.idx  backtracer.h.1852D7AEBAB861B7.idx  base.h.39D961BF98DBC4C0.idx  base_sink-inl.h.986B3D3CF50EE29A.idx  base_sink.h.540FA0C8CC45A56B.idx  basic_file_sink-inl.h.83E600770C81F253.idx  basic_file_sink.h.6761E7702A3410F9.idx  begin.hpp.E56C077B3BCBA24B.idx  binary_reader.hpp.A533EBE89CE370D4.idx  binary_writer.hpp.6E896DDC8A43F4A3.idx  bundled_fmtlib_format.cpp.535AB281838259B9.idx  byte_container_with_subtype.hpp.F3E2AEF5CE953B6A.idx  cfg.cpp.F6A02DE584FEF01C.idx  circular_q.h.43DAE5FCC43EE3E5.idx  color_sinks.cpp.44F4B1C17193A5C8.idx  common-inl.h.C865ACC64D557A8C.idx  common.h.FC33DDD038546CFB.idx  console_globals.h.5AAF0D131424C55A.idx  context.c.352AB013F2124A02.idx  cpp_future.hpp.59699F197BABFCA4.idx  detected.hpp.7EA43035A4CF2220.idx  egl_context.c.AA7D31B14865D2CC.idx  end.hpp.AA724B61BDD3FB86.idx  exceptions.hpp.3170A92062DF9FEE.idx  file_helper-inl.h.598A3E11EDEC939F.idx  file_helper.h.6D8673E8F71DB089.idx  file_sinks.cpp.9439368FA72505BE.idx  fmt.h.BE8EB45FD5F48FFE.idx  (+135 more)
.githooks/: commit-msg-hook.sh  commit-msg.ps1  commit-msg.sh  pre-commit.sh  pre-merge-commit.sh  pre-rebase.sh
.github/workflows/: cmake-multi-platform.yml
assets/materials/: default.mat
assets/models/gltf/bench/: scene.gltf
assets/models/gltf/japanese_castle/: scene.gltf
assets/models/gltf/neon/: scene.gltf
assets/models/gltf/plant/: scene.gltf
assets/models/gltf/playground/: scene.gltf
assets/models/gltf/pool/: scene.gltf
assets/shaders/: basic.frag  basic.vert  bright_pass.frag  error.frag  error.vert  gaussian_blur.frag  grid.frag  grid.vert  ibl_brdf_lut.frag  ibl_brdf_lut.vert  ibl_common.glsl  ibl_irradiance.frag  ibl_prefilter.frag  light_block.glsl  mesh.frag  mesh.vert  pbr_helpers.glsl  shadow_depth.vert  skybox.frag  skybox.vert  tone_mapping.frag  tone_mapping.vert
config/: settings.json
docs/: ASSETS.md  core-classes.md
renderer/: CMakeLists.txt
renderer/include/app/: Application.h
renderer/include/core/: Buffer.h  Camera.h  CameraController.h  Primitives.h  Renderer.h  UniformBuffer.h
renderer/include/scene/: FrameSubmission.h
renderer/src/app/: Application.cpp  Application.h  SampleScene.h
renderer/src/core/: Buffer.cpp  Camera.cpp  Camera.h  CameraController.cpp  KeyboardInput.cpp  KeyboardInput.h  MeshBuffer.cpp  MouseInput.cpp  MouseInput.h  Primitives.cpp  Primitives.h  Renderer.cpp  Renderer.h  ShaderProgram.cpp  Transform.cpp  Transform.h  UniformBuffer.cpp  VertexArray.cpp
renderer/src/opengl/core/: Camera.cpp  MeshBuffer.cpp  Primitives.cpp
renderer/src/opengl/utils/: Options.cpp
renderer/src/scene/: RenderItem.h
renderer/src/utils/: Options.cpp  Options.h
shaders/: basic.frag  basic.vert
sprints/: sprint1.md  sprint2.md  sprint3.md
src/: CMakeLists.txt
src/app/: Application.cpp  Application.h  SampleScene.cpp  SampleScene.h  main.cpp
src/core/: Buffer.cpp  Buffer.h  MeshBuffer.cpp  MeshBuffer.h  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  VertexArray.cpp  VertexArray.h  VertexLayout.cpp  VertexLayout.h
src/include/app/: Application.h
src/include/assets/: AssetImporter.h  ModelData.h
src/include/core/: Camera.h  CameraController.h  EnvironmentLightingPipeline.h  FrameClearInfo.h  FullscreenQuad.h  Grid.h  HdrFramebuffer.h  IBLDebugMode.h  IInputProvider.h  InitContext.h  InputManager.h  Material.h  Mesh.h  MeshBuffer.h  MeshData.h  MouseInput.h  PostProcessPass.h  Primitives.h  RenderQueue.h  Renderer.h  ShaderProgram.h  Skybox.h  SubMesh.h  SubmissionContext.h  Texture2D.h  TextureCubemap.h  Transform.h  VertexArray.h
src/include/core/shadows/: CascadedShadowMap.h  ShadowMap.h
src/include/scene/: FrameSubmission.h  GpuLightData.h  Light.h  LightBlock.h  LightBuilder.h  LightEnvironment.h  LightUtils.h  ReflectionProbe.h  RenderItem.h  Scene.h  SceneUtils.h
src/include/ui/: RendererUI.h
src/include/utils/: Options.h
src/opengl/app/: Application.cpp
src/opengl/assets/: AssetImporter.cpp  MeshImporter.cpp  ModelImporter.cpp
src/opengl/core/: Buffer.cpp  Camera.cpp  CameraController.cpp  EnvironmentLightingPipeline.cpp  FrameClearInfo.cpp  FullscreenQuad.cpp  Grid.cpp  HdrFramebuffer.cpp  InitContext.cpp  InputManager.cpp  KeyboardInput.cpp  Material.cpp  Mesh.cpp  MeshBuffer.cpp  MouseInput.cpp  PostProcessPass.cpp  Primitives.cpp  RenderQueue.cpp  Renderer.cpp  ShaderProgram.cpp  Skybox.cpp  SubmissionContext.cpp  Texture2D.cpp  TextureCubemap.cpp  Transform.cpp  UniformBuffer.cpp  VertexArray.cpp  VertexLayout.cpp
src/opengl/core/shadows/: CascadedShadowMap.cpp  ShadowMap.cpp
src/opengl/scene/: LightBlock.cpp  LightEnvironment.cpp  LightUtils.cpp  RenderItem.cpp  Scene.cpp
src/opengl/ui/: RendererUI.cpp
src/opengl/utils/: Options.cpp
src/utils/: Options.cpp  Options.h
test-app/: CMakeLists.txt
test-app/src/: DioramaScene.cpp  DioramaScene.h  JapanScene.cpp  JapanScene.h  NeonCityScene.cpp  NeonCityScene.h  NormalMapScene.cpp  NormalMapScene.h  PbrValidationScene.cpp  PbrValidationScene.h  SampleScene.cpp  SampleScene.h  SolarSystemScene.cpp  SolarSystemScene.h  main.cpp
testApp/: CMakeLists.txt
testApp/src/: main.cpp
